AccountManagerPlugin: Fix user admin panel forms after [12515], refs #9946 and #10682.
The main form has been broken by adding another form, the user list filter,
because HTML doesn't allow nesting of forms.  Obviously I've been concerned
too much about visual style to do full regression testing, sorry.

Another correction: Do no longer hide all bottons, when user deletion is not
supported by any password store. This would unwarrantedly disable account
approval/banning and access to the account properties clean-up too.

git-svn-id: https://trac-hacks.org/svn@12539 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/accountmanagerplugin/trunk/acct_mgr/htdocs/acct_mgr.css
+++ b/accountmanagerplugin/trunk/acct_mgr/htdocs/acct_mgr.css
@@ -2,8 +2,9 @@
 /* styles for users admin page */
 
 div#accountlist { max-height:640px; overflow:auto; }
-tr.missing td, tr.missing td a { color: #998; }
 fieldset.collapsed { border-width: 0; padding: 0 0.5em; }
+form#query { clear: none; }
+tr.missing td, tr.missing td a { color: #998; }
 
 /* styles for account details admin page */
 
